[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "forge_events"
version = "0.1.0"
description = "Event-driven internals"
authors = ["Forge Team"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/forge-framework/forge_events"
packages = [{include = "forge_events"}]

[tool.poetry.dependencies]
python = "^3.8"

# Core dependencies
pydantic = "^2.0.0"
typing-extensions = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
ruff = "^0.0.290"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I", "N", "UP", "ANN", "PT", "RUF"]
ignore = [] 