[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "forge-events"
version = "0.1.0"
description = "Event-driven internals for the Forge Framework"
authors = ["Forge Framework <forge@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/forge-framework/forge_events"
documentation = "https://forge-framework.github.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [{include = "forge_events"}]

[tool.poetry.dependencies]
python = "^3.8"

# Core dependencies
pydantic = "^2.0.0"
typing-extensions = "^4.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.263"
mypy = "^1.3.0"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I"] 